# inkclip

./: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/src/: app.rs  epd.rs  init.rs  main.rs  midi.rs  pack.rs  sysex.rs  uid.rs  util.rs
firmware/src/app/: descriptor.rs  mod.rs
firmware/src/device/: epd.rs  mod.rs  usb_hid.rs
hardware/: .gitignore  README.md  inkclip.kicad_pcb  inkclip.kicad_pro  inkclip.kicad_sch
public/: robots.txt
src/: App.svelte  Main.svelte  Unsupported.svelte  app.css
src/connect/: ConnectButton.svelte  ConnectSection.svelte
src/edit/: EditSection.svelte
src/edit/controls/: BackgroundColorSlider.svelte  ControlsSection.svelte
src/edit/controls/conversion/: BiasSlider.svelte  ContrastSlider.svelte
src/edit/controls/dimensions/: AspectRatioAlert.svelte  ScaleModeToggleGroup.svelte  TransformControls.svelte
src/edit/preview/: FileSelect.svelte  PreviewCanvases.svelte  PreviewSection.svelte
src/lib/: Canvas.svelte  ConnectButton.svelte  Infotip.svelte  WriteButton.svelte  constants.ts
src/lib/components/: ImplicitNumericInput.svelte  Infotip.svelte  MoreInfo.svelte
src/lib/contexts/: bitmap.svelte.ts  config.svelte.ts  device.svelte.ts  image.svelte.ts  rendered.svelte.ts
src/lib/image/: quantizer.ts  rgbquant.d.ts  scaler.ts  transform.ts
src/lib/layouts/: Footer.svelte  Main.svelte  Unsupported.svelte
src/lib/layouts/connect/: ConnectButton.svelte  ConnectSection.svelte
src/lib/layouts/edit/: EditSection.svelte
src/lib/layouts/write/: WriteButton.svelte  WriteSection.svelte
src/lib/utils/: media.svelte.ts
src/write/: WriteButton.svelte  WriteSection.svelte
webapp/: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pwa-assets.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wrangler.toml
webapp/public/.well-known/: assetlinks.json
webapp/src/: App.svelte  app.css  main.ts  vite-env.d.ts
webapp/src/lib/: constants.ts  utils.svelte.ts  utils.ts
webapp/src/lib/components/: ImplicitNumericInput.svelte  MoreInfo.svelte
webapp/src/lib/contexts/: config.svelte.ts  device.svelte.ts  files.svelte.ts  image.svelte.ts  midi.svelte.ts  rendered.svelte.ts
webapp/src/lib/image/: device.ts  pack.ts  quantizer.ts  scaler.ts  transform.ts
webapp/src/lib/layouts/: Footer.svelte  Main.svelte  Unsupported.svelte
webapp/src/lib/utils/: media.svelte.ts
webapp/twa/: twa-manifest.json
(+49 files in other folders)
