[package]
name = "inkclip-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-stm32 = { version = "0.5.0", features = [
  "stm32f411ce",
  "defmt",
  "memory-x",
  "unstable-pac",
  "time-driver-any",
  "exti",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
epd-waveshare = "0.6.0"
panic-abort = "0.3.2"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
postcard = { version = "1.1.3", features = ["defmt"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
static_cell = "2.1.1"

[profile.dev]
opt-level = "s"
lto = "fat"

[profile.release]
opt-level = "z"
lto = "fat"
